--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#agenda-container">Program</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="DJs.html">DJs</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
