--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
   <meta property="og:title" content="Frankfurt Bachata Marathon" />
-  <meta property="og:url" content="https://www.frankfurt-bachata-festival.com/" />
+  <meta property="og:url" content="https://frankfurt-bachata-marathon.de" />
   <meta property="og:description" content="Bachata all Day and Night" />
   <meta property="og:image" content="images/logo2.png" />
   
@@ -178,6 +178,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://frankfurt-bachata-festival.de/">Level Up Festival</a>
             </li>
             <li class="nav-item">
               <div class="btn_block">
