--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,9 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="jack-n-jill-competition.html">Jack&Jill</a>
+            </li>
+            <li class="nav-item">
               <div class="btn_block">
                 <a class="nav-link dark_btn" href="index.html">Buy Now</a>
                 <div class="btn_bottom"></div>
