--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="jack-n-jill-competition.html">Jack&Jill Competition</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="https://frankfurt-bachata-festival.de/">Level Up Festival</a>
             </li>
             <li class="nav-item">
