--- a/jack-n-jill-competition.html
+++ b/jack-n-jill-competition.html
@@ -60,24 +60,20 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
   <style>
-        /* Container for responsive iframe */
-        .video-container {
+    .video-container {
       position: relative;
-      padding-bottom: 56.25%; /* 16:9 aspect ratio (height/width * 100) */
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
       height: 0;
       overflow: hidden;
       max-width: 100%;
       background: #000;
     }
-
-    /* Make the iframe responsive */
     .video-container iframe {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      border: 0;
     }
     .carousel img {
       width: 400px; /* Fixed width */
@@ -144,9 +140,9 @@
     </div>
 
     <!-- Registration Link -->
-        <div class="text-center my-4">
+        <!-- <div class="text-center my-4">
             <a href="#registration-form" class="btn btn-primary btn-lg">Register Now</a>
-        </div>
+        </div> -->
 
     <!-- Responsive YouTube Video -->
     <div class="video-container">
@@ -359,53 +355,15 @@
      console.log('Form submitted successfully');
   })
 };
-
   </script>
-    <script src="js/jquery.js"></script>
-    <!-- owl-js-Link -->
-    <script src="js/owl.carousel.min.js"></script>
-    <!-- bootstrap-js-Link -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- aos-js-Link -->
     <script src="js/aos.js"></script>
     <!-- Typed Js Cdn -->
     <script src='js/typed.min.js'></script>
     <!-- main-js-Link -->
     <script src="js/main.js"></script>
-  
-    <script>
-      $("#typed").typed({
-        strings: ["Type Writing Text", "Auto Type Text", "Add any text you like here."],
-        typeSpeed: 100,
-        startDelay: 0,
-        backSpeed: 60,
-        backDelay: 2000,
-        loop: true,
-        cursorChar: "|",
-        contentType: 'html'
-      });
-  
-      // Fixed Discount Dish JS
-      $(document).ready(function () {
-        let cardBlock = document.querySelectorAll('.task_block');
-        let topStyle = 120;
-  
-        cardBlock.forEach((card) => {
-          card.style.top = `${topStyle}px`;
-          topStyle += 30;
-        })
-  
-      }
-      );
-  
-      // Scroll Down Window 
-      $(document).ready(function () {
-        // Attach a click event handler to the button
-        $('#scrollButton').click(function () {
-          // Scroll down smoothly 200 pixels from the current position
-          $('html, body').animate({ scrollTop: $(window).scrollTop() + 600 }, 800); // Adjust the speed (800ms) as needed
-        });
-      });
-  </script>
+  <!-- owl-js-Link -->
+  <script src="js/owl.carousel.min.js"></script>
+  <!-- bootstrap-js-Link -->
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
