--- a/jack-n-jill-competition.html
+++ b/jack-n-jill-competition.html
@@ -197,6 +197,24 @@
     </form>
     <div id="form-response" class="mt-3"></div>
   </section>
+  
+  <section class="container my-5">
+  <div class="text-center">
+    <h3 >Conditions</h3>
+    <p class="lead">Registration is free for all Fullpass, Daypass or Marathonpass holders. Otherwise costs 20 EUR. </p>
+</div>
+<div class="text-center">
+  <h3 >Categories</h3>
+  <p class="lead">There will be 2 Categories: Intermediate and Advanced</p>
+</div>
+<div class="text-center">
+  <h3 >Prices</h3>
+  <p class="lead">1.Place: The winner couple will get 200 EUR and 4 Fullpasses for amazing Festivals</p>
+  <p class="lead">1.Place: The couple getting the second place will get 100 EUR and 4 Partypasses for amazing Festivals</p>
+  <p class="lead">3.Place: The couple getting the third place will get 4 Partypasses for amazing Festivals</p>
+</div>
+</section>
+
   <section class="container my-5">
     <h2 class="text-center mb-4">Participate in this incredible experience!</h2>
     <!-- Photo Carousel -->
