--- a/DJs.html
+++ b/DJs.html
@@ -149,7 +149,7 @@
             </li> -->
             <!-- secondery menu end -->
             <li class="nav-item">
-              <a class="nav-link" href="#pricing_container">Tickets</a>
+              <a class="nav-link" href="/">Tickets</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#agenda-container">Program</a>
@@ -159,7 +159,7 @@
             </li>
             <li class="nav-item">
               <div class="btn_block">
-                <a class="nav-link dark_btn" style="color: black; background-color: white;" href="#pricing_container">BUY NOW</a>
+                <a class="nav-link dark_btn" style="color: black; background-color: white;" href="/">BUY NOW</a>
                 <div class="btn_bottom"></div>
               </div>
             </li>
