--- a/index.html
+++ b/index.html
@@ -706,6 +706,12 @@
                           5 EUR</p><p> -->
                           ** JacknJill Competition included in Full,Party &amp; Marathonpass otherwise participation costs 15 EUR</p>
                       </div>
+                      <div class="text-center">
+                        <h5 class="display-4">Jack n Jill - Dance Competition 2023</h5>
+                        <p class="lead">Get ready to showcase your talent! Join us for the most exciting bachata social competition of the year. Win amazing prizes and recognition.</p>
+                        <strong><a href="jack-n-jill-competition.html"> Registration Link </a></strong>
+                    </div>
+
                     </div>
                   </div>
                 </div>
