--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pricing</title>
+  <title>subscription</title>
 
   <!-- icofont-css-link -->
   <link rel="stylesheet" href="css/icofont.min.css">
@@ -18,14 +18,50 @@
   <link rel="stylesheet" href="css/aos.css">
   <!-- Coustome-Style-link -->
   <link rel="stylesheet" href="css/style.css">
+    <!-- Coustome-Style-link 2 -->
+    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/custom-media.css">
+
   <!-- Responsive-Style-link -->
   <link rel="stylesheet" href="css/responsive.css">
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
+  <script> !function(f,b,e,v,n,t,s) {if(f.fbq)return;n=f.fbq=function(){n.callMethod? n.callMethod.apply(n,arguments):n.queue.push(arguments)}; if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0'; n.queue=[];t=b.createElement(e);t.async=!0; t.src=v;s=b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t,s)}(window, document,'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '989911359104150'); fbq('track', 'PageView'); </script> 
+  <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=989911359104150&ev=PageView&noscript=1"
+    /></noscript>
+  <script>
+    !function (w, d, t) {
+      w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var i="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};var o=document.createElement("script");o.type="text/javascript",o.async=!0,o.src=i+"?sdkid="+e+"&lib="+t;var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(o,a)};
+    
+      ttq.load('CHP9IF3C77UFB57TC3BG');
+      ttq.page();
+    }(window, document, 'ttq');
+    </script>  
+    <!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '1097645271437998');
+  fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=1097645271437998&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Meta Pixel Code -->
+</head>
+
 </head>
 
 <body>
+
 
   <!-- Preloader -->
   <div id="preloader">
@@ -39,7 +75,7 @@
       <!-- navigation bar -->
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" alt="Logo">
+          <img src="images/logo2.png" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,6 +96,9 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="jack-n-jill-competition.html">Jack&Jill</a>
+            </li>
+            <li class="nav-item">
               <div class="btn_block">
                 <a class="nav-link dark_btn" href="index.html">Buy Now</a>
                 <div class="btn_bottom"></div>
@@ -73,53 +112,143 @@
     <!-- container end -->
   </header>
 
-
   <!-- Page-wrapper-Start -->
   <div class="page_wrapper">
 
-
-    <!-- Pricing Section End -->
-
-    <!-- FAQ Tab Section Start -->
-    <section class="row_am faq_section" id="faqsec">
+    <!-- Contact Form Section Start -->
+    <section class="row_am experts_team_section">
       <div class="container">
-        <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
-          <span class="title_badge"></span>
-          </br>
-          </br>
-          <h2><span>Unsubscribe</span></h2>
-          <h2 class="output"><span></span></h2>
-          <h2 id="success_message">Enter Your Email</h2>
-          <h3>Your Email:</h3>
-          <h4 id="name_display"></h4>
-          <h4 id="User_email"></h4>
-          <h4 id="User_courses"></h4>
-          <h4 id="User_saldo"></h4>
-          <h4 id="User_lastpayment"></h4>
-        </br>
-          <h5 id="user_message"></h5>
-        </br>
-          <h5 id="User_anmerkungen"></h5>
-        </br>
-          <h5 id="User_active"></h5>
-        </br>
-          <label for="User_id" style="font-weight: bold">Email:</label>
-          <input id="User_id" value="">
-        </br>
-        </br>
-          <button type="button" id="get_ticket_btn" class="btn btn-info">Unsubscribe</button>
+        <div class="row abt_text aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+          <div class="col-md-5">
+            <h5>ALMA DANCE EMAIL SUBSCRIPTION</h5>
+          </div>
+          <div class="col-md-7">
+            <div id="unsubscribe-form" class="container my-5">
+              <h2 class="text-center mb-4">Unsubscribe from Newsletter</h2>
+              <form id="newsletter-unsubscribe-form">
+                <div class="mb-3">
+                  <p for="email" class="form-p">Email Address</p>
+                  <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Unsubscribe</button>
+              </form>
+              <div id="form-response" class="mt-3"></div>
+            </div>
+            </div>
+          </div>
         </div>
-  
-        <div class="container-fluid" id="tableContainer">
-          <input type="hidden" id="User_name" value="Guest User">
-          <input type="hidden" id="User_nextpayment" value="Not Registered yet">
-        </div>
-
       </div>
     </section>
-    <!-- FAQ Tab Section End -->
-    
+    <section class="row_am experts_team_section">
+      <div class="container">
+        <div class="row abt_text aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+          <div class="col-md-5">
+            <h5>ALMA DANCE EMAIL SUBSCRIPTION</h5>
+          </div>
+          <div class="col-md-7">
+            <div id="unsubscribe-form" class="container my-5">
+              <h2 class="text-center mb-4">Subscribe again to Newsletter</h2>
+              <form id="newsletter-subscribe-form">
+                <div class="mb-3">
+                  <p for="email-sub" class="form-p">Email Address</p>
+                  <input type="email" class="form-control" id="email-sub" name="email-sub" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Subscribe again</button>
+              </form>
+              <div id="form-response-sub" class="mt-3"></div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container my-5">
+      <div class="text-center">
+        <h3>What now?</h3>
+        <p class="lead">You will receive a confirmation email about your unsubscription/subscription.</p>
+      </div>
+      <div class="text-center">
+        <h3>Changed your mind?</h3>
+        <p class="lead">You can resubscribe / unsubscribe at any time using our registration form.</p>
+      </div>
+    </section>
+    <!-- Contact Form Section End -->
 
+        <!-- Contact Us Section Start -->
+        <section class="contact_section">
+          <div class="container">
+            <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
+              <span class="title_badge">Contact us</span>
+              <h2>Any query ? <span>let's talk</span></h2>
+              <p></p>
+            </div>
+            <ul class="contact_listing">
+              <li data-aos="fade-up" data-aos-duration="1500">
+                <span class="icon">
+                  <img src="images/mail_icon.png" alt="image">
+                </span>
+                <span class="lable">Email us</span>
+                <a href="mailto:example@gmail.com">info@alma-dance.de</a>
+              </li>
+              <li data-aos="fade-up" data-aos-duration="1500" data-aos-delay="150">
+                <span class="icon">
+                  <img src="images/phone_icon.png" alt="image">
+                </span>
+                <span class="lable">Call us</span>
+                <a href="tel:1234567899">+49 163 9641730</a>
+              </li>
+              <li data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
+                <span class="icon">
+                  <img src="images/phone_icon.png" alt="image">
+                </span>
+                <span class="lable">Whatsapp</span>
+                <a target="_blank" href="https://api.whatsapp.com/message/AQECYWAZB43BJ1?autoload=1&app_absent=0">Text us</a>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <!-- Contact Us Section End -->
+    <!-- GOOGLE MAP Section Start -->
+    <section id="agenda-container" class="how_it_section">
+      <div class="how_it_inner" data-aos="fade-in" data-aos-duration="1500">
+        <div class="container">
+          <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
+            <span class="title_badge"></span>
+            <h2>Location</h2>
+            <br>
+            <br>
+            <p class="">
+              The festival will take place in Tanzschule Weiss in Offenbach - the biggest dance school in Hessen!
+With two big dance rooms, a bar as well as parking, the school has everything a festival needs to have - and all in one location.
+            </p>
+          </div>
+          <div class="map_block row_am" data-aos="fade-in" data-aos-duration="1500">
+            <div class="container">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2559.3814990473165!2d8.762107312853404!3d50.09786587140821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd0e07ac5698fb%3A0x53ed4913fa811815!2sDance%20School%20Weiss!5e0!3m2!1sen!2sde!4v1698083103229!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+          <h4>How to get there</h4>
+          <br>
+          <p class="">
+            The dance school can be easily reached with public transport - only 400m away from the Offenbach (Main) train station - that's just a 5 min walk!
+Offenbach (Main) train station is well connected with Frankfurt city centre - there are several regional trains going directly from the Frankfurt Main Train Station.
+You can also take the S-Bahn S1/S9 from the city centre (Hauptwache or Konstablerwache station) and get off at Offenbach (Main) Marktplatz. From there it's just a 13 min walk to the dance school.
+          </p>
+          <br>
+          <p class="">
+            <a href="https://docs.google.com/document/d/1hdGZnFeDEFh-5QiQWFL81Qlx9lYPl1NvqBP4BFbyLzU/edit?usp=sharing" class="btn-dark">Hotels close to the location</a>
+          </p>
+
+          <div class="text-center">
+            <div class="btn_block">
+              <a href="index.html" class="btn puprple_btn ml-0">BUY NOW</a>
+              <div clTailorass="btn_bottom"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+<!-- GOOGLE MAP  Section End -->  
 
     <!-- Footer-Section start -->
     <footer class="white_text" data-aos="fade-in" data-aos-duration="1500">
@@ -144,20 +273,20 @@
                 </form>
               </div>
               <ul class="contact_info">
-                <li><a href="mailto:">support@example.com</a></li>
-                <li><a href="tel: ">+1-900-123 4567</a></li>
+                <li><a href="mailto:">info@alma-dance.de</a></li>
+                <li><a href="tel: ">+49 163 9641730</a></li>
               </ul>
               <ul class="social_media">
-                <li><a href="#"><i class="icofont-facebook"></i></a></li>
-                <li><a href="#"><i class="icofont-twitter"></i></a></li>
-                <li><a href="#"><i class="icofont-instagram"></i></a></li>
-                <li><a href="#"><i class="icofont-pinterest"></i></a></li>
+                <li><a href="https://www.facebook.com/FrankfurtBachataFestival"><i class="icofont-facebook"></i></a></li>
+                <li><a href="https://www.youtube.com/@almadancebachatasalsa9317"><i class="icofont-youtube"></i></a></li>
+                <li><a href="https://www.instagram.com/frankfurt_bachata_festival/"><i class="icofont-instagram"></i></a></li>
               </ul>
             </div>
           </div>
           <div class="col-md-6">
             <div class="download_side">
-              <h3>The Bachata Experience</h3>
+              <h4 style="color: white;">Frankfurt Bachata Festival</h4>
+              <h5 style="color: white;">The Bachata Experience</h5>
               <ul class="app_btn">
                 <!-- <li>
                   <a class="navbar-brand" href="index.html">
@@ -173,16 +302,18 @@
         <div class="container">
           <div class="ft_inner">
             <div class="copy_text">
-              <p>©Frankfurt Bachata Festival - Copyrights 2024. All rights reserved.</p>
+              <p>©Frankfurt Bachata Festival - Copyright</p>
             </div>
             <ul class="links">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="#pricing_container">Tickets</a></li>
               <li><a href="contact.html">Contact us</a></li>
+              <li><a href="Datenschutz.html">Data Privacy</a></li>
+              <li><a href="Impressum.html">Impressum</a></li>
             </ul>
             <div class="design_by">
-              <p>Crafted by <a href="https://alma-dance.de" target="blank">Eduardo Millan</a></p>
+              <p>Developper <a href="https://alma-dance.de" target="blank">Eduardo Millan</a></p>
             </div>
           </div>
         </div>
@@ -195,23 +326,129 @@
       <span><i class="icofont-arrow-up"></i></span>
     </div>
 
-
   </div>
   <!-- Page-wrapper-End -->
 
   <!-- Jquery-js-Link -->
   <script src="js/jquery.js"></script>
-  <!-- Jquery-js-Link -->
-  <script src="js/app-unsubscribe.js"></script>
   <!-- owl-js-Link -->
   <script src="js/owl.carousel.min.js"></script>
   <!-- bootstrap-js-Link -->
   <script src="js/bootstrap.min.js"></script>
   <!-- aos-js-Link -->
   <script src="js/aos.js"></script>
+  <!-- Typed Js Cdn -->
+  <script src='js/typed.min.js'></script>
   <!-- main-js-Link -->
   <script src="js/main.js"></script>
+
+  <script>
+    $("#typed").typed({
+      strings: ["Type Writing Text", "Auto Type Text", "Add any text you like here."],
+      typeSpeed: 100,
+      startDelay: 0,
+      backSpeed: 60,
+      backDelay: 2000,
+      loop: true,
+      cursorChar: "|",
+      contentType: 'html'
+    });
+
+    // Fixed Discount Dish JS
+    $(document).ready(function(){
+ 
+ let cardBlock = document.querySelectorAll('.task_block');
+ let topStyle = 120;
+
+ cardBlock.forEach((card) => {
+   card.style.top = `${topStyle}px`;
+   topStyle += 30;
+ })
+
+// Handle form submission
+const form = document.getElementById('newsletter-unsubscribe-form');
+const formResponse = document.getElementById('form-response');
+const form2 = document.getElementById('newsletter-subscribe-form');
+const formResponse2 = document.getElementById('form-response-sub');
+const URL = 'https://script.google.com/macros/s/AKfycbyjxO6_PfH3ccfXGGcCNDVF3CgiU_PBczMryzOfZjNgb42K0fFRWQuQQuj5_vDIy_JM/exec';
+
+form.addEventListener('submit', async (e) => {
+e.preventDefault();
+console.log('Form submitting..');
+
+var email = document.getElementById("email").value;
+let arr = [email,"unsubscribe","festival"];
+
+console.log(arr);
+sData(arr,URL,"unsubscribe");
+
+document.getElementById("email").disabled = true;
+
+const formData = new FormData(form);
+console.log('Form data:', formData);
+});
+
+form2.addEventListener('submit', async (e) => {
+e.preventDefault();
+console.log('Form submitting..');
+
+var email = document.getElementById("email-sub").value;
+let arr = [email,"subscribe","festival"];
+
+console.log(arr);
+sData(arr,URL,"subscribe");
+
+document.getElementById("email-sub").disabled = true;
+
+const formData = new FormData(form);
+console.log('Form data:', formData);
+});
+});
+
+    function sData(arr,url_message,method) {
+      let form,formResponse;
+
+      if (method=="unsubscribe") {
+      form = document.getElementById('newsletter-unsubscribe-form');
+      formResponse = document.getElementById('form-response');
+      formResponse.innerHTML = '<div class="alert alert-success">Submitted!.</div>';
+      } else {
+      form = document.getElementById('newsletter-subscribe-form');
+      formResponse = document.getElementById('form-response-sub');
+      formResponse.innerHTML = '<div class="alert alert-success">Submitted!.</div>';
+      }
+      let formData = new FormData();
+
+      formData.append('data', JSON.stringify(arr));
+      console.log("posting unsubscription to API");
+
+      fetch(url_message, {
+      method: 'POST',
+      body: formData
+      }).then(function (rep) {
+      return rep.json()
+      }).then(function (data) {
+      formResponse.innerHTML = '<div class="alert alert-success">The process was successfully!.</div>';
+      form.reset();
+      console.log('Processed successfully');
+      })
+    };
+
+
+
+    // Scroll Down Window 
+    $(document).ready(function () {
+      // Attach a click event handler to the button
+      $('#scrollButton').click(function () {
+        // Scroll down smoothly 200 pixels from the current position
+        $('html, body').animate({ scrollTop: $(window).scrollTop() + 600 }, 800); // Adjust the speed (800ms) as needed
+      });
+    });
+
+  </script>
+
 
 </body>
 
 </html>
+
