--- a/admin-page.html
+++ b/admin-page.html
@@ -23,6 +23,64 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
+  <style>
+
+    .photo-container {
+        width: 100vw; /* Full viewport width */
+        height: 100vh; /* Full viewport height */
+        overflow: hidden; /* Hide content that overflows container */
+        position: relative; /* For positioning overlay */
+    }
+
+    .photo {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Maintain aspect ratio and fill container */
+        display: block; /* Prevent image from creating a small gap */
+    }
+
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; /* Vertically center content */
+        align-items: center; /* Horizontally center content */
+        text-align: center; /* Center text within overlay */
+        opacity: 0; /* Initially hidden */
+        transition: opacity 0.3s ease; /* Smooth transition for hover effect */
+    }
+
+    .photo-container:hover .overlay {
+        opacity: 1; /* Show overlay on hover */
+    }
+
+    .title {
+        font-size: 2em;
+        margin-bottom: 0.5em;
+    }
+
+    .description {
+        font-size: 1.2em;
+    }
+
+
+    /* Optional: Responsive adjustments */
+    @media (max-width: 768px) {
+       .title {
+           font-size: 1.5em;
+       }
+       .description {
+           font-size: 1em;
+       }
+    }
+</style>
+
 </head>
 
 <body>
@@ -122,6 +180,13 @@
       </div>
     </section>
     <!-- FAQ Tab Section End -->
+
+    <div class="photo-container">
+      <img class="photo" src="https://lan27nbio8.ufs.sh/f/0dhEbmpq2JyrfOUZrlSfaZs9k1BGAER6heW3XxJ4nmPLoOlw" alt="Large Horizontal Photo">  <div class="overlay">
+          <div class="title">Photo Title</div>
+          <div class="description">A brief description of the photo.</div>
+      </div>
+  </div>
 
 
 
