--- a/jack-n-jill-competition.html
+++ b/jack-n-jill-competition.html
@@ -328,10 +328,10 @@
         var passtype = document.getElementById("pass-type").value;
         var email = document.getElementById("email").value;
 
-        let arr = [ firstname,category,passtype,email];
+        let arr = [ firstname,category,passtype,email,"Jack n Jill Competition"];
 
         console.log(arr);
-        sData(arr,'https://script.google.com/macros/s/AKfycbwU8-RPJGweuNwwQOYd3kGFJVWdCWIYXPnSzN3CPBjSZVvbEJCHx8AoEArssjq9IhU/exec');
+        sData(arr,'https://script.google.com/macros/s/AKfycbwkCUjSgmbJ15kNTXuRleFACf1Giyv3D5zl0IulQqFNHDfMqfdzKv60y8XTwfdAYMs/exec');
 
         document.getElementById("name").disabled = true;
         document.getElementById("category").disabled = true;
