--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
               </div>
             </div>
             <!-- pricing box yearly end -->
-
+            <p class="contact_text text-center" data-aos="fade-up" data-aos-duration="1500">For <strong>GROUP-PASSES -></strong><a href="special-offers.html"> Click Here</a>.</p>
             <p class="contact_text text-center" data-aos="fade-up" data-aos-duration="1500">Not
               sure what to choose ? <a href="contact.html">contact us</a> or check <a href="#faqsec">FAQ Section</a>.</p>
           </div>
