--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
                           ** JacknJill Competition included in Full,Party &amp; Marathonpass otherwise participation costs 15 EUR</p>
                       </div>
                       <div class="text-center">
-                        <h5 class="display-4">Jack n Jill - Dance Competition 2023</h5>
+                        <h5 class="display-4">Jack n Jill - Dance Competition 2025</h5>
                         <p class="lead">Get ready to showcase your talent! Join us for the most exciting bachata social competition of the year. Win amazing prizes and recognition.</p>
                         <strong><a href="jack-n-jill-competition.html"> Registration Link </a></strong>
                     </div>
@@ -934,7 +934,7 @@
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                       <div class="card-body">
-                        <p>The Frankfurt Bachata Marathon will take place from 19th to 22th April</p>
+                        <p>The Frankfurt Bachata Marathon will take place from 24th to 27th April 2025.</p>
                       </div>
                     </div>
                   </div>
@@ -1013,7 +1013,7 @@
                     </div>
                     <div id="collapsefive" class="collapse" aria-labelledby="headingfive" data-parent="#accordionExample">
                       <div class="card-body">
-                        <p>The Fullpass Ticket grants you access to all festival activities except the especial bootcamps, including workshops, performances, parties, and the live concert.</p>
+                        <p>The Fullpass Ticket grants you access to all festival activities except the especial bootcamps, including workshops, performances, parties.</p>
   
                       </div>
                     </div>
@@ -1033,7 +1033,7 @@
                     </div>
                     <div id="collapsesix" class="collapse" aria-labelledby="headingsix" data-parent="#accordionExample">
                       <div class="card-body">
-                        <p>The Partypass Ticket grants you access to all festival parties and the live concert.</p>
+                        <p>The Partypass Ticket grants you access to all festival parties.</p>
   
                       </div>
                     </div>
