--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                         <h3>97.00 <span>/ticket</span></h3>
                       </div>
                       <div class="ticket_pic">
-                        <img src="images/Ticket.jpg" alt="ticket frankfurt bachata marathon">
+                        <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
                       </div>
                       <ul class="features">
                         <li>
@@ -442,7 +442,7 @@
                         <h3>€66.00 <span>/ticket</span></h3>
                       </div>
                       <div class="ticket_pic">
-                        <img src="images/Ticket.jpg" alt="ticket frankfurt bachata marathon">
+                        <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
                       </div>
                       <ul class="features">
                         <li>
@@ -470,7 +470,7 @@
                         <h3>44.00 <span>/ticket</span></h3>
                       </div>
                       <div class="ticket_pic">
-                        <img src="images/Ticket.jpg" alt="ticket frankfurt bachata marathon">
+                        <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
                       </div>
                       <ul class="features">
                         <li>
@@ -506,7 +506,7 @@
                       <h3>€-00.00 <span>/ticket</span></h3>
                     </div>
                     <div class="ticket_pic">
-                      <img src="images/Ticket.jpg" alt="ticket frankfurt bachata marathon">
+                      <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
                     </div>
                     <ul class="features">
                       <li>
@@ -535,7 +535,7 @@
                       <h3>79.00<span>/ticket</span></h3>
                     </div>
                     <div class="ticket_pic">
-                      <img src="images/Ticket.jpg" alt="ticket frankfurt bachata marathon">
+                      <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
                     </div>
                     <ul class="features">
                       <li>
@@ -563,7 +563,7 @@
                       <h3>67.00 <span>/ticket</span></h3>
                     </div>
                     <div class="ticket_pic">
-                      <img src="images/Ticket.jpg" alt="ticket frankfurt bachata marathon">
+                      <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
                     </div>
                     <ul class="features">
                       <li>
