--- a/index.html
+++ b/index.html
@@ -423,6 +423,10 @@
                           <span class="icon"><i class="icofont-check-circled"></i></span>
                           <p>All Parties & Socials</p>
                         </li>
+                        <li>
+                          <span class="icon"><i class="icofont-check-circled"></i></span>
+                          <p>Jack & Jill Competition</p>
+                        </li>
                       </ul>
                       <div class="btn_block">
                         <a href="https://buy.stripe.com/9AQ02h0seavj7lefZ0" class="btn puprple_btn ml-0">Buy Ticket</a>
@@ -434,8 +438,7 @@
                     <div class="pannel_block highlited_block" data-aos="fade-up" data-aos-duration="1500">
                       <div class="heading">
                         <h3>Marathon Pass</h3>
-                        <span>All Parties</span>
-                        
+                        <span>All Parties</span>                        
                         <!-- <span class="offer">Save 50%</span> -->
                       </div>
                       <div class="pricing">
@@ -453,6 +456,10 @@
                           <span class="icon"><i class="icofont-check-circled"></i></span>
                           <p>All Parties & Socials</p>
                         </li>
+                        <li>
+                          <span class="icon"><i class="icofont-check-circled"></i></span>
+                          <p>Jack & Jill Competition</p>
+                        </li>
                       </ul>
                       <div class="btn_block white_btn">
                         <a href="https://buy.stripe.com/9AQ8yNdf0fPD4928wz" class="btn puprple_btn ml-0">Buy Ticket</a>
@@ -464,7 +471,7 @@
                     <div class="pannel_block" data-aos="fade-up" data-aos-duration="1500">
                       <div class="heading">
                         <h3>Partypass</h3>
-                        <span>3 Party Nights</span>
+                        <span>3 Party Nights (Fr, Sa, Su)</span>
                       </div>
                       <div class="pricing">
                         <h3>44.00 <span>/ticket</span></h3>
@@ -479,7 +486,7 @@
                         </li>
                         <li>
                           <span class="icon"><i class="icofont-check-circled"></i></span>
-                          <p>All Night Parties</p>
+                          <p>3 Night Parties (Fr, Sa, Su)</p>
                         </li>
                       </ul>
                       <div class="btn_block">
