--- a/jack-n-jill-competition.html
+++ b/jack-n-jill-competition.html
@@ -145,7 +145,7 @@
         </div> -->
 
     <!-- Responsive YouTube Video -->
-    <div class="video-container">
+    <!-- <div class="video-container">
       <iframe
         src="https://www.youtube.com/embed/P9JCKufELWs?si=zI-hvV6XiMLZKjWb"
         title="YouTube video player"
@@ -154,7 +154,7 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
-    </div>
+    </div> -->
   </section>
 
 
