--- a/index.html
+++ b/index.html
@@ -663,6 +663,18 @@
           <div class="item">
             <div class="value_block">
               <div class="icon">
+                <img src="images/DavidJessy.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>David & Jessy</h3>
+                <p>Germany
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
                 <img src="images/G&A website.jpg" alt="image">
               </div>
               <div class="text">
@@ -764,6 +776,8 @@
                           Eduardo &amp; Natalia</p><p>
                           Alexej &amp; Florence</p><p></p>
                           Hari &amp; Lilien</p><p></p>
+                          Rocio Kolofon</p><p></p>
+                          David &amp; Jessy</p><p></p>
                           &amp; More Artists to confirm</p><p>  
                           </p><p>
                           &#9552;&#9552;&#9733; DJs&#9733;&#9552;&#9552;</p><p>
