--- a/jack-jill-scoring.html
+++ b/jack-jill-scoring.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <base target="_top">
-  <title>Multi-Participant Dance Competition Scoring</title>
+  <title>Dance Competition Scoring</title>
   <style>
     body {
       font-family: Arial, sans-serif;
